# ADB-Capture

./: .gitignore  LICENSE  README.md  discover.bat  discover_device.bat  discover_device.sh  orchestrator.py  pyproject.toml  start_capture.bat  start_capture.sh
.github/workflows/: lint.yml  release.yml
adb_capture/: __init__.py  __main__.py  cli.py  connection.py  discovery.py  file_utils.py  orchestrator.py  ui.py
adb_capture.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
