[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adb-capture"
version = "0.1.0"
description = "Continuously sync Android screenshots, camera photos, and videos to your computer in real-time over wireless ADB."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Austin FM"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
adb-capture = "adb_capture.cli:main"

[tool.setuptools.packages.find]
include = ["adb_capture"]
